--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
+    "d3-scale": "^3.2.3",
     "node-sass": "^4.14",
     "papaparse": "^5.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
+    "react-simple-maps": "^2.3.0",
+    "react-tooltip": "^4.2.11",
     "recharts": "^2.0.0-beta.8",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
