--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@testing-library/user-event": "^12.2.2",
     "d3": "^6.3.1",
     "d3-scale": "^3.2.3",
+    "highcharts": "^8.2.2",
+    "highcharts-react-official": "^3.0.0",
     "node-sass": "^4.14",
     "papaparse": "^5.3.0",
     "react": "^17.0.1",
